--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
     <head>
         <meta charset="UTF-8" />
         <link rel="icon" type="image/png" href="/logo.png" />
+        <meta name="description" content="The 3rd version of my portfolio, made with React/TypeScript" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta property="og:title" content="Portfolio V3.0" />
+        <meta property="og:description" content="The 3rd version of my portfolio, made with React/TypeScript" />
+        <meta property="og:image" content="https://elwan.ch/logo.png" />
+        <meta property="og:url" content="https://elwan.ch" />
         <title>Portfolio V3.0</title>
     </head>
     <body>
